<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="add">Add</string>
    <string name="adjusted">Adjusted:</string>
    <string name="after_tax_monthly">After Tax Monthly:</string>
    <string name="age">Age:</string>
    <string name="age_60_year">Year Turned 60:</string>
    <string name="amount">Amount:</string>
    <string name="all">All</string>
    <string name="app_fail">App Failure</string>
    <string name="app_icon">Application icon</string>
    <string name="app_name">Retire Plan</string>
    <string name="average">Average:</string>
    <string name="average_earnings">Average Earnings:</string>
    <string name="bad_header">Invalid Header</string>
    <string name="balance">Balance:</string>
    <string name="blank_name">Please Enter a Name</string>
    <string name="blank_values">Please enter non-blank values</string>
    <string name="budget">Monthly Budget</string>
    <string name="category">Category:</string>
    <string name="divider">Divider</string>
    <string name="duplicate_category">Duplicate category</string>
    <string name="duplicate_life_expectancy">Duplicate life expectancy</string>
    <string name="duplicate_month_year">Duplicate month and year value</string>
    <string name="duplicate_year">Duplicate year value</string>
    <string name="enter_balance">Enter portfolio balance</string>
    <string name="enter_budget_item">Enter Budget Item</string>
    <string name="enter_earnings">Enter earnings</string>
    <string name="enter_life_expectancy">Enter Life Expectancy</string>
    <string name="file_import">Import</string>
    <string name="file_not_found">File Not Found</string>
    <string name="file_read_error">Unable to read the selected file</string>
    <string name="file_type">Incorrect file type</string>
    <string name="filing_status">Filing Status:</string>
    <string name="five_year">5y</string>
    <string name="gain">Gain</string>
    <string name="growth_rate">Growth Rate:</string>
    <string name="home">Home</string>
    <string name="house_value">House Value:</string>
    <string name="import_complete">Import Complete</string>
    <string name="interest_rate">Mortgage Rate:</string>
    <string name="invalid_values">Value is invalid</string>
    <string name="import_type">Select Data to Import</string>
    <string name="life_expectancies">Life Expectancies</string>
    <string name="life_expectancy_75">75% Life Expectancy:</string>
    <string name="life_expectancy_50">50% Life Expectancy:</string>
    <string name="life_expectancy_25">25% Life Expectancy:</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="month">Month:</string>
    <string-array name="month_list">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="monthly_social_security">Social Security:</string>
    <string name="monthly_withdrawal">Monthly Withdrawal:</string>
    <string name="mortgage_balance">Mortgage Balance:</string>
    <string name="mortgage_equity">Mortgage Equity:</string>
    <string name="mortgage_payoff_amount">Mortgage Monthly Payoff:</string>
    <string name="mortgage_payoff_date">Mortgage Payoff Date:</string>
    <string name="name">Name:</string>
    <string name="navigation_drawer_close">Menu closed</string>
    <string name="navigation_drawer_open">Menu open</string>
    <string name="one_year">1y</string>
    <string name="overall_gains">Overall Gains</string>
    <string name="period_gains">Period Gains</string>
    <string name="portfolio">Portfolio</string>
    <string name="portfolio_end_date">Portfolio End Date:</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="principal_interest">Mortgage P&amp;I:</string>
    <string name="probability75">75%</string>
    <string name="probability50">50%</string>
    <string name="probability25">25%</string>
    <string name="reported">Reported:</string>
    <string name="reported_earnings">Reported Earnings:</string>
    <string-array name="status_list">
        <item>Single</item>
        <item>Married Joint</item>
        <item>Married Separate</item>
        <item>Household</item>
    </string-array>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="settings_saved">Settings values saved</string>
    <string name="sex">Sex:</string>
    <string-array name="sexes_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="six_month">6m</string>
    <string name="snapshot">Snapshot</string>
    <string name="social_security">Social Security</string>
    <string name="start_month">SSI Start Month:</string>
    <string name="start_year">SSI Start Year:</string>
    <string name="tax_table">Tax Table</string>
    <string name="ten_year">10y</string>
    <string name="twenty_year">20y</string>
    <string name="two_year">2y</string>
    <string name="update_complete">Update complete</string>
    <string name="year">Year:</string>
</resources>
