<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/social_security"
        android:icon="@drawable/social_security"
        android:title="@string/social_security"/>
    <item
        android:id="@+id/portfolio"
        android:icon="@drawable/portfolio"
        android:title="@string/portfolio"/>
    <item
        android:id="@+id/overall_gains"
        android:icon="@drawable/overall_gains"
        android:title="@string/overall_gains"/>
    <item
        android:id="@+id/period_gains"
        android:icon="@drawable/period_gains"
        android:title="@string/period_gains"/>
    <item
        android:id="@+id/expectancies"
        android:icon="@drawable/life_expectancy"
        android:title="@string/life_expectancies"/>
    <item
        android:id="@+id/budget"
        android:icon="@drawable/budget"
        android:title="@string/budget"/>
    <item
        android:id="@+id/portfolio_value"
        android:icon="@drawable/portfolio_value"
        android:title="@string/portfolio_value"/>
    <item
        android:id="@+id/file_import"
        android:icon="@drawable/file_import"
        android:title="@string/file_import"/>
    <item
        android:id="@+id/snapshot"
        android:icon="@drawable/snapshot"
        android:title="@string/snapshot"/>
</menu>
