<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:id="@+id/textViewSexLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:gravity="center"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/sex"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAgeLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewAgeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="center"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/age"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSexLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewProbability75Label"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewProbability75Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="center"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/probability75"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAgeLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewProbability50Label"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewProbability50Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="center"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/probability50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewProbability75Label"
        app:layout_constraintEnd_toStartOf="@+id/textViewProbability25Label"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewProbability25Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/probability25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewProbability50Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <ImageView
        android:id="@+id/imageViewTopDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/screen_divider"
        android:contentDescription="@string/divider"
        app:layout_constraintTop_toBottomOf="@+id/textViewProbability25Label"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExpectancies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddExpectancyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:maxImageSize="40dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="28dp"
        app:backgroundTint="@color/colorRed"
        android:contentDescription="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
