<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:id="@+id/textViewEarningsYearLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/year"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewReportedEarningsLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewReportedEarningsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/reported"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEarningsYearLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewAverageEarningsLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewAverageEarningsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/average"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewReportedEarningsLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewAdjustedEarningsLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewAdjustedEarningsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/adjusted"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAverageEarningsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <ImageView
        android:id="@+id/imageViewTopDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/screen_divider"
        android:contentDescription="@string/divider"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdjustedEarningsLabel"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEarnings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddEarningsEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:maxImageSize="36dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="28dp"
        app:backgroundTint="@color/colorRed"
        android:contentDescription="@string/add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
