<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/imageViewTopDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/screen_divider"
        android:contentDescription="@string/divider"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewPayoffDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/mortgage_payoff_date"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMortgagePayoffDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPayoffDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMonthlyPayoffLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/mortgage_payoff_amount"
        app:layout_constraintTop_toBottomOf="@+id/textViewMortgagePayoffDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMortgagePayoffAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMonthlyPayoffLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewEquityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/mortgage_equity"
        app:layout_constraintTop_toBottomOf="@+id/textViewMortgagePayoffAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMortgageEquity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEquityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMonthlySocialSecurityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/monthly_social_security"
        app:layout_constraintTop_toBottomOf="@+id/textViewMortgageEquity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewMonthlySocialSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMonthlySocialSecurityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewPortfolioEndDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/portfolio_end_date"
        app:layout_constraintTop_toBottomOf="@+id/textViewMonthlySocialSecurity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewPortfolioEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPortfolioEndDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewAfterTaxMonthlyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        android:text="@string/after_tax_monthly"
        app:layout_constraintTop_toBottomOf="@+id/textViewPortfolioEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewAfterTaxMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAfterTaxMonthlyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
