<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:id="@+id/textViewGainMonthLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewGainYearLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewGainYearLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/year"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewGainMonthLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewOverallGainLabel"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <TextView
        android:id="@+id/textViewOverallGainLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:gravity="start"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/gain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewGainYearLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTopDivider"/>

    <ImageView
        android:id="@+id/imageViewTopDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/screen_divider"
        android:contentDescription="@string/divider"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverallGainLabel"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOverallGains"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
